objects/Channel_Discount__c/Channel_Discount__c.object-meta.xml
<CustomObject>
    <description>Discount based on channel being direct Partner or Distributor</description>
    <label>Channel Discount</label>
    <nameField>
        <displayFormat>CD-{0000000}</displayFormat>
        <label>Channel Discount ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>