objects/Channel_Discount__c/fields/Account_Channel__c.field-meta.xml
<CustomField>
    <fullName>Account_Channel__c</fullName>
    <label>Account Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>