objects/Channel_Discount__c/fields/Channel_Discount__c.field-meta.xml
<CustomField>
    <fullName>Channel_Discount__c</fullName>
    <label>Channel Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>