objects/Channel_Discount__c/fields/Modified_At__c.field-meta.xml
<CustomField>
    <fullName>Modified_At__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified At</label>
    <type>DateTime</type>
</CustomField>